# workout-tracker

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
deploy/: docker-compose.yml
deploy/docker/: Dockerfile
docs/: deployment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.mjs
frontend/public/: sw.js
frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css
frontend/src/components/: AppleSignInButton.js  AppleSignInButton.tsx  EncryptionTokenPrompt.js  EncryptionTokenPrompt.tsx  GuidedWorkout.js  GuidedWorkout.tsx  PasskeySetup.js  PasskeySetup.tsx  RegistrationForm.js  SettingsMenu.js  SettingsMenu.tsx  TemplateBuilder.js  TemplateBuilder.tsx  ThemeToggle.js  ThemeToggle.tsx  TrendChart.js  TrendChart.tsx  UnitToggle.js  UnitToggle.tsx  WorkoutForm.js  WorkoutForm.tsx  WorkoutList.js  WorkoutList.tsx
frontend/src/lib/: api.js  api.ts  encryption.js  encryption.ts  passkeys.js  passkeys.ts  units.js  units.ts
frontend/src/types/: apple.d.ts  theme.ts  units.ts
scripts/: api.sh  build_frontend.sh
src/workout_tracker/: __init__.py  app.py  cli.py  config.py  database.py  deps.py  encryption.py  models.py  schemas.py
src/workout_tracker/auth/: apple.py  challenge_store.py  passkeys.py  (+2 more)
tests/: conftest.py  test_auth_apple.py  test_challenge_store.py  test_passkey_register.py  test_passkeys.py  test_templates.py  test_workouts.py  test_workouts_bodyweight.py
(+10 files in other folders)
